CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(network-security-1)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
LINK_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/lib/)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/srcs/)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/srcs/)

IF (UNIX)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -W -Wall -Wextra -Werror")
endif (UNIX)